# random-receipt

./: Procfile  README.md  app.json  app.py  main.py  pyproject.toml
.github/workflows/: python-app.yml
random_receipt/: app.py  receipt.py  utils.py
random_receipt/data/: groceries.csv  grocery_logos.csv  stores.csv
random_receipt/templates/: receipt.html
tests/: test_endpoints.py  test_receipt.py  test_utils.py
