[tool.poetry]
name = "random-receipt"
version = "0.1.0"
description = "Random receipt generator"
authors = ["Michail Melonas <michailmelonas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
Flask = "^2.1.2"
weasyprint = "^55.0"
boto3 = "^1.24.22"
gunicorn = "^20.1.0"
pdf2image = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
